--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "paymentmanagerrevamp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,23 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.1",
+    "@supabase/supabase-js": "^2.45.2",
+    "@tanstack/react-query": "^5.53.2",
+    "chart.js": "^4.4.4",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/tailwindcss": "^3.1.0",
     "daisyui": "^4.12.10",
     "eslint": "^8",
-    "eslint-config-next": "^0.2.4",
+    "eslint-config-next": "14.2.6",
     "postcss": "^8",
-    "tailwindcss": "^2.0.4",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
