--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "lucide-react": "^0.436.0",
+    "luxon": "^3.5.0",
     "next": "14.2.6",
+    "random-key": "^0.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
