--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.2",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.53.2",
     "chart.js": "^4.4.4",
     "dotenv": "^16.4.5",
@@ -19,6 +20,7 @@
     "next": "14.2.6",
     "random-key": "^0.3.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "yup": "^1.4.0"
